--- a/desktop.yml
+++ b/desktop.yml
@@ -1,10 +1,25 @@
 ---
 
 - name: Playbook to setup desktop
-  hosts: localhost
+  hosts: desktop
   gather_facts: false
   become: true
   tasks:
+#gsettings set org.gnome.desktop.input-sources sources "[('xkb', 'us'), ('xkb', 'ru')]"
+#gsettings set org.gnome.desktop.input-sources xkb-options "['grp:caps_toggle']"
+#gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita-dark'^V
+    #- name: add ru layout
+    #  community.general.dconf:
+    #    key: "/org/gnome/desktop/input-sources/sources"
+    #    value: "[('xkb', 'us'), ('xkb', 'ru')]"
+    #- name: set layout switch to caps
+    #  community.general.dconf:
+    #    key: "/org/gnome/desktop/input-sources/xkb-options"
+    #    value: "['grp:caps_toggle']"
+    - name: enable dark theme
+      community.general.dconf:
+        key: "/org/gnome/desktop/interface/gtk-theme"
+        value: 'Yaru-dark'
     - name: update apt 
       apt:
         upgrade: yes 
@@ -22,7 +37,6 @@
           - docker.io
           - docker-compose
           - wireguard
-          # exfat-fuse, exfat-utils
     - name: isntall snap packages
       community.general.snap:
         name:
