--- a/tasks/gnome.yml
+++ b/tasks/gnome.yml
@@ -14,3 +14,7 @@
   community.general.dconf:
     key: "/org/gnome/desktop/interface/color-scheme"
     value: "'prefer-dark'"
+- name: dock-click-to-minimize
+  community.general.dconf:
+    key: "/org/gnome/shell/extensions/dash-to-dock/click-action"
+    value: "'minimize'"
