--- a/main.yml
+++ b/main.yml
@@ -43,7 +43,11 @@
           - goldendict
           - docker.io
           - docker-compose
+          - jq
           - wireguard
+          - meld
+          - touchegg # multitouch touchpad for X-server
+          - rmlint   # tool to manage duplicated files
     - name: isntall snap packages
       community.general.snap:
         name:
@@ -54,7 +58,9 @@
       community.general.snap:
         name:
           - sublime-text
+          - sublime-merge
           - slack
+          #- pycharm-community
         classic: yes
     - name: add autostart applications
       vars:
