--- a/main.yml
+++ b/main.yml
@@ -1,16 +1,11 @@
 ---
 
-- name: gnome
-  hosts: localhost
-  gather_facts: false
-  become: false
-  tasks:
-    - include: tasks/gnome.yml
-
 - name: Playbook to setup desktop
-  hosts: localhost # desktop
+  hosts: target
   gather_facts: false
   become: true
+  vars_files:
+    - defaults/main.yml
   tasks:
     - name: update apt 
       apt:
@@ -19,64 +14,40 @@
     - name: install apt packages
       become: true
       apt:
-        pkg:
-          #- wget
-          - htop
-          - tmux
-          - git
-          - tig
-          - screen
-          - curl
-          - net-tools
-          - gparted
-          #- lshw-gtk
-          #- vmfs-tools
-          #- wine-stable
-          #- steam-installer
-          - network-manager-openconnect-gnome
-          - vim
-          - vlc 
-          - terminator
-          - openconnect
-          - gnome-tweaks
-          #- chromium-browser
-          - goldendict
-          - docker.io
-          - docker-compose
-          - jq
-          - wireguard
-          - meld
-          - touchegg # multitouch touchpad for X-server
-          - rmlint   # tool to manage duplicated files
-          - lvm2
-    - name: isntall snap packages
-      community.general.snap:
-        name:
-          - joplin-desktop
-          - telegram-desktop
-          #- onlyoffice-desktopeditors #huge enough to skip
-    - name: isntall snap classic packages
-      community.general.snap:
-        name:
-          - sublime-text
-          - sublime-merge
-          - slack
-          #- pycharm-community
-        classic: yes
+        pkg: "{{ apt_packages }}"
+#    - name: isntall snap packages
+#      community.general.snap:
+#        name:
+#          - joplin-desktop
+#          - telegram-desktop
+#          #- onlyoffice-desktopeditors #huge enough to skip
+#    - name: isntall snap classic packages
+#      community.general.snap:
+#        name:
+#          - sublime-text
+#          - sublime-merge
+#          - slack
+#          #- pycharm-community
+#        classic: yes
     - name: add autostart applications
       vars:
         user: "{{ lookup('env','USER') }}" #remove
         apps:
           #- subl
-          - firefox
+          #- firefox
           #- chromium-browser
-          - terminator
+          #- terminator
       template:
         src: "autostart.desktop.j2"
         dest: "/home/{{ user }}/.config/autostart/{{ item }}.desktop"
       with_items: "{{ apps }}"
 
+# TODO: drop gnome-games, autoremove
 
-#/etc/systemd/logind.conf
-#[Login]
-#HandleLidSwitch=ignore
+- name: gnome
+  hosts: target
+  gather_facts: false
+  become: false
+  tasks:
+    - include: tasks/gnome.yml
+
